# oz_fastapi

./: pyproject.toml  test.ps1
app/: __init__.py
app/configs/: __init__.py  base_settings.py  database_settings.py  local_settings.py
app/dtos/: article_and_comments_response.py
app/models/: article.py  base_model.py  like.py  user.py
app/routers/: article_router.py
app/services/: article_service.py  like_service.py
app/settings/: __init__.py  database_settings.py
app/tests/: conftest.py  fixtures.py  test_obvious.py
app/tests/routers/: test_article_router.py
app/tests/services/: test_article_service.py
migrations/models/: 0_20240314230217_init.py  1_20240315183434_update.py  2_20240315183452_update.py  3_20240930161245_update.py  4_20240930162011_update.py
